RESOLVED FIXED303670
[Site Isolation] Cross-site iframes don't receive DeviceMotionEvents
https://bugs.webkit.org/show_bug.cgi?id=303670
Summary [Site Isolation] Cross-site iframes don't receive DeviceMotionEvents
rupin
Reported 2025-12-05 17:01:16 PST
[Site Isolation] Cross-site iframes don't receive DeviceMotionEvents
Attachments
Radar WebKit Bug Importer
Comment 1 2025-12-05 17:01:22 PST
rupin
Comment 2 2025-12-05 17:13:37 PST
EWS
Comment 3 2025-12-06 12:31:14 PST
Committed 304059@main (48c02ec687e4): <https://commits.webkit.org/304059@main> Reviewed commits have been landed. Closing PR #54965 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.